@@ -38,6 +38,7 @@ exempt of errors.
 - Ingo Hofmann
 - Ivan Romanov (ivanromanov)
 - Jiri Zouhar
+- Jean-Francois Dockes (medoc)
 - John Dennis
 - Jonathan Casiot (no_dice)
 - Josh Carroll
